--- a/Index.html
+++ b/Index.html
@@ -65,11 +65,11 @@ span.psw {
   }
 }
 </style>
-  <title>W3 Web Login Page</title>
+  <title>Web Login Page</title>
 </head>
 <body>
 
-<h2>Trainer Login Page</h2>
+<h2>Dev Login Page</h2>
 
 <form action="/action_page.php" method="post">
   <div class="imgcontainer">
