--- a/Index.html
+++ b/Index.html
@@ -69,7 +69,7 @@ span.psw {
 </head>
 <body>
 
-<h2>Dev Login Page</h2>
+<h2>Student Login Page</h2>
 
 <form action="/action_page.php" method="post">
   <div class="imgcontainer">
